qed-interpreter/src/snapshots/qed_interpreter__test__interpreter@001.qed.snap
---
source: qed-interpreter/src/lib.rs
assertion_line: 51
expression: "Interpreter::run_example(&path).unwrap()"
input_file: tests/001.qed
---
Context 0:
  Scope 0:
    a: 2
