qed-interpreter/src/snapshots/qed_interpreter__test__interpreter@010.qed.snap
---
source: qed-interpreter/src/lib.rs
assertion_line: 41
expression: "Interpreter::run_example(&path).unwrap()"
input_file: tests/010.qed
---
Context 0:
  Scope 0:
    a: 4
